--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.main.banner-mode=OFF
 server.error.include-message=always
 
 # Configuration
-external.bands.api.base-url=https://bands-api.vercel.app/api/bands
+external.bands.api.base-url=https://bands-api.vercel.app/api
